2009-05-23  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Changer/compat.pm: run a full manual scan on update()
	* installcheck/Amanda_Changer_compat.pl: test it

2009-05-23  Dustin J. Mitchell <dustin@zmanda.com>
	* amandad-src/Makefile.am application-src/Makefile.am
	  oldrecover-src/Makefile.am recover-src/Makefile.am
	  restore-src/Makefile.am: remove LIB_EXTENSION
	* config/amanda/defaults.m4 config/amanda/devprefix.m4
	  config/amanda/dumpers.m4 config/amanda/flags.m4 config/amanda/ipv6.m4
	  config/amanda/lfs.m4 config/amanda/libs.m4 config/amanda/progs.m4
	  config/amanda/ps.m4 config/amanda/swig.m4 config/amanda/syshacks.m4
	  config/amanda/tape.m4 config/amanda/userid.m4 configure.in: use
	  AC_CANONICAL_HOST, rather than AC_CANONICAL_TARGET (which is for
	  compilers!)

2009-05-22  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/amfetchdump.c: Fix sort_needed_tapes_by_write_timestamp.

2009-05-22  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendbackup.c: Compatibity with 2.4.2 server.

2009-05-22  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/vfs-device.c: close the tapelabel file after reading it

2009-05-21  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Fix for 'estimate calcsize server' with older
				client.

2009-05-21  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/queueing.c: set queue_fd->errmsg.
	* restore-src/restore.c: report queue_fd.errmsg
	* server-src/amcheckdump.pl: report $queue_fd->{errmsg}
          Check validation status before reporting status.


2009-05-21  Dustin J. Mitchell <dustin@zmanda.com>
	* changer-src/chg-zd-mtx.sh: make -search errors non-fatal

2009-05-20  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/restore.c: Report error.

2009-05-20  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Changer.pm: check for tpchanger="" even if getconf_seen
	  is true; same for tapedev

2009-05-20  Dustin J. Mitchell <dustin@zmanda.com>